fixed icon alignment

--- a/style.css
+++ b/style.css
@@ -42,10 +42,13 @@ table {
 }
 
 th {
-  padding-left: 1em;
   padding-top: 2px;
   padding-bottom: 2px;
   text-align: left;
+}
+
+.icon {
+  text-align: center;
 }
 
 .both {
